feat: added auth with jwt token
